--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 .body {
     background-color: white;
+    overflow: hidden;
+    
 }
 
+#bg {
+    width: 100%;
+    height: 100%;
+    background: grey;
+    position: absolute;
+    left: var(--mouse-x);
+    top: var(--mouse-y);
+  }
+  
