--- a/style.css
+++ b/style.css
@@ -1,15 +1,184 @@
 .body {
-    background-color: white;
-    overflow: hidden;
-    
+  background-color: white;
+  overflow: hidden;
+}
+
+:root {
+  --x-and: -200%;
+  --y-and: -200%;
+  --x-or: -200%;
+  --y-or: -200%;
+  --x-nor: -200%;
+  --y-nor: -200%;
 }
 
 #bg {
-    width: 100%;
-    height: 100%;
-    background: grey;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: var(--mouse-x);
+  top: var(--mouse-y);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#content {
+  pointer-events: none;
+  background: grey;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  /*
+    box-shadow: 2px 3px 20px black, 0 0 60px #8a4d0f inset;
+    background: #fffef0;
+    filter: url(#wavy2);
+*/
+  background-color: #269;
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.5) 2px,
+      transparent 2px
+    ),
+    linear-gradient(90deg, rgba(255, 255, 255, 0.5) 2px, transparent 2px),
+    linear-gradient(rgba(255, 255, 255, 0.3) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(255, 255, 255, 0.3) 1px, transparent 1px);
+  background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+  background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
+  box-shadow: 0px 20px 90px -10px rgba(0, 0, 0, 0.5);
+}
+
+#tools {
+  position: absolute;
+  left: -30%;
+  width: 35%;
+  height: 100%;
+  top: 0;
+  background-color: white;
+  z-index: 4;
+  transition: 0.3s;
+  background-color: white;
+  box-shadow: 0px 20px 90px -10px rgba(0, 0, 0, 0.5);
+}
+
+#tools:hover {
+  left: 0%;
+  z-index: 6;
+}
+
+#gates {
+  position: absolute;
+  height: 100%;
+  width: 30%;
+  padding: 5%;
+  line-height: 0.3;
+}
+
+#and {
+    pointer-events: auto;
+    padding: 10px;
+    width: fit;
+    background-color: white;
+    transform: scale(0.8);
+    border: 1px solid black;
+    width: fit-content;
+    block-size: fit-content;
+    text-align: left;
+    line-height: 0.3;
+    z-index: 9;
+    transition: all .2s ease-in-out;
+}
+
+#and:hover {
+    transform: scale(1.000000001);
+}
+
+#nor:hover {
+    transform: scale(1.000000001);
+}
+
+#and-icon {
+    pointer-events: none;
+    padding: 10px;
+    width: fit;
+    background-color: white;
+    transform: scale(0.8);
+    border: 1px solid black;
+    width: fit-content;
+    block-size: fit-content;
+    text-align: left;
+    line-height: 0.3;
     position: absolute;
-    left: var(--mouse-x);
-    top: var(--mouse-y);
-  }
-  
+    left: var(--x-and);
+    top: var(--y-and);
+    z-index: 10;
+}
+
+#or {
+    pointer-events: auto;
+    padding: 10px;
+    width: fit;
+    background-color: white;
+    transform: scale(0.8);
+    border: 1px solid black;
+    width: fit-content;
+    block-size: fit-content;
+    text-align: left;
+    line-height: 0.3;
+    z-index: 9;
+    transition: all .2s ease-in-out;
+}
+
+#nor {
+    pointer-events: auto;
+    padding: 10px;
+    width: fit;
+    background-color: white;
+    transform: scale(0.8);
+    border: 1px solid black;
+    width: fit-content;
+    block-size: fit-content;
+    text-align: left;
+    line-height: 0.3;
+    z-index: 9;
+    transition: all .2s ease-in-out;
+}
+
+
+#or:hover {
+    transform: scale(1.000000001);
+}
+
+#or-icon {
+    pointer-events: none;
+    padding: 10px;
+    width: fit;
+    background-color: white;
+    transform: scale(0.8);
+    border: 1px solid black;
+    width: fit-content;
+    block-size: fit-content;
+    text-align: left;
+    line-height: 0.3;
+    position: absolute;
+    left: var(--x-or);
+    top: var(--y-or);
+    z-index: 10;
+}
+
+#nor-icon {
+    pointer-events: none;
+    padding: 10px;
+    width: fit;
+    background-color: white;
+    transform: scale(0.8);
+    border: 1px solid black;
+    width: fit-content;
+    block-size: fit-content;
+    text-align: left;
+    line-height: 0.3;
+    position: absolute;
+    left: var(--x-nor);
+    top: var(--y-nor);
+    z-index: 10;
+}
